refactor: core users - wip